--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -1,4 +1,4 @@
-SRC = main.cpp Zombie.cpp Zombie.hpp newZombie.cpp randomChump.cpp
+SRC = main.cpp Zombie.cpp Zombie.hpp zombieHorde.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
