--- a/cpp01/ex05/Makefile
+++ b/cpp01/ex05/Makefile
@@ -2,13 +2,13 @@ SRC = main.cpp Harl.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
-CC = g++ -g -Wall -Wextra -Werror -std=c++98
+CC = c++ -g -Wall -Wextra -Werror -std=c++98
 NAME = Harl
 
 all:		$(NAME)
 
 $(NAME):	$(SRC)
-			$(CC) -o Harl $(SRC)
+			$(CC) -o $(NAME) $(SRC)
 
 clean:
 	rm -f $(OBJ) $(NAME)
