--- a/cpp01/ex02/Makefile
+++ b/cpp01/ex02/Makefile
@@ -2,7 +2,7 @@ SRC = main.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
-CC = g++ -Wall -Wextra -Werror -std=c++98
+CC = c++ -Wall -Wextra -Werror -std=c++98
 NAME = BrainZ
 
 all:		$(NAME)
