--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -2,7 +2,7 @@ SRC = main.cpp Weapon.cpp HumanA.cpp HumanB.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
-CC = g++ -Wall -Wextra -Werror -std=c++98
+CC = c++ -Wall -Wextra -Werror -std=c++98
 NAME = Weapon
 
 all:		$(NAME)
